--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -248,4 +248,10 @@
         completions."
     </string>
 
+    <!-- Highest Paid-->
+    <string name="highest_title">%s - Senior Full Stack Web</string>
+    <string name="highest_salary">Salary: <b>%s</b></string>
+    <string name="highest_deviation">Range: <b>%s</b></string>
+    <string name="highest_amout">Remote jobs: <b>%s</b></string>
+
 </resources>
