--- a/base/src/main/res/values/strings.xml
+++ b/base/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="action_settings">Settings</string>
     <string name="share">share</string>
     <string name="donate">donate</string>
+    <string name="title_jobs">Jobs</string>
 
     <string name="title_highestpaid">Highest Paid</string>
     <string name="title_companies">Companies</string>
