--- a/base/src/main/res/values/strings.xml
+++ b/base/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">Remote Jobs</string>
     <string name="action_settings">Settings</string>
-    <string name="share">share</string>
-    <string name="donate">donate</string>
+    <string name="share">Share</string>
+    <string name="donate">Donate</string>
     <string name="title_jobs">Jobs</string>
 
     <string name="title_highestpaid">Highest Paid</string>
