--- a/home/src/main/res/values/strings.xml
+++ b/home/src/main/res/values/strings.xml
@@ -228,5 +228,5 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="install_full_version">Install full version</string>
-    <string name="favorites">favorites</string>
+    <string name="favorites">Favorites</string>
 </resources>
