--- a/home/src/main/res/values/strings.xml
+++ b/home/src/main/res/values/strings.xml
@@ -229,4 +229,5 @@
     <string name="action_settings">Settings</string>
     <string name="install_full_version">Install full version</string>
     <string name="favorites">Favorites</string>
+    <string name="tell_us_what_do_you_want">Tell us what fix or improve to the next version :)</string>
 </resources>
